--- a/WEB-SITES/web/kuicho.html
+++ b/WEB-SITES/web/kuicho.html
@@ -49,18 +49,18 @@ and open the template in the editor.
                   <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a id="hoteles" href="#"><span class="glyphicon glyphicon-briefcase"></span>   Hoteles</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-cutlery"></span>    Restaurantes</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-gift"></span>   Tiendas de artesanías</a></li>
-                     <li><a href="#"><span class="glyphicon glyphicon-leaf"></span>  Temazcales</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-briefcase"></span>   Hoteles</a></li>
+                    <li><a  href="#"><span class="glyphicon glyphicon-cutlery"></span>    Restaurantes</a></li>
+                    <li><a id="artesanias" href="#"><span class="glyphicon glyphicon-gift"></span>   Tiendas de artesanías</a></li>
+                     <li><a id="hoteles" href="#"><span class="glyphicon glyphicon-leaf"></span>  Temazcales</a></li>
                     <li class="divider"></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-plus-sign"></span>    Médicos</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-phone"></span>    Policía</a></li>
+                    <li><a  id="medicos"  href="#"><span class="glyphicon glyphicon-plus-sign"></span>    Médicos</a></li>
+                    <li><a  id="policias" href="#"><span class="glyphicon glyphicon-phone"></span>    Policía</a></li>
                   </ul>
                 </li>
                 <li class="active"><a href="#">Inicio</a></li>
                 <li><a href="#about">Paquetes</a></li>
-                <li><a href="#contact">Promociones</a></li>
+                <li><a href="promociones.html">Promociones</a></li>
                 
               </ul>
             </div>
