--- a/WEB-SITES/web/pruebas-croos-domain.html
+++ b/WEB-SITES/web/pruebas-croos-domain.html
@@ -37,7 +37,7 @@ and open the template in the editor.
       //  console.log(data);
     },
     error: function (responseData) {
-        alert('POST failed.');
+        alert('POST fallo gachamente');
     }
 });
         });
