Actualizando promociones.html

--- a/WEB-SITES/web/kuicho.html
+++ b/WEB-SITES/web/kuicho.html
@@ -50,7 +50,7 @@ and open the template in the editor.
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="#"><span class="glyphicon glyphicon-briefcase"></span>   Hoteles</a></li>
-                    <li><a  href="#"><span class="glyphicon glyphicon-cutlery"></span>    Restaurantes</a></li>
+                    <li><a  href="restaurantes.html"><span class="glyphicon glyphicon-cutlery"></span>    Restaurantes</a></li>
                     <li><a id="artesanias" href="#"><span class="glyphicon glyphicon-gift"></span>   Tiendas de artesanías</a></li>
                      <li><a id="hoteles" href="#"><span class="glyphicon glyphicon-leaf"></span>  Temazcales</a></li>
                     <li class="divider"></li>
@@ -59,7 +59,7 @@ and open the template in the editor.
                   </ul>
                 </li>
                 <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="#about">Paquetes</a></li>
+                <li><a href="paquetes.html">Paquetes</a></li>
                 <li><a href="promociones.html">Promociones</a></li>
                 
               </ul>
@@ -88,7 +88,7 @@ and open the template in the editor.
                 
               <h1>Hoteles</h1>
               <p><strong>El mejor lugar para olvidarse del estrés</strong> Un lugar único para relajarse, un sitio cerca de la ciudad de México, rodeado de  montañas, aire limpio y lleno de misticismo y magia!</p>
-              <p><a class="btn btn-lg btn-success" href="#" role="button">Más información</a></p>
+              <p><a class="btn btn-lg btn-success" href="promociones.html" role="button">Más información</a></p>
             </div>
           </div>
         </div>
@@ -130,7 +130,7 @@ and open the template in the editor.
           Consulta nuestros hoteles, precios, paquetes y ofertas!
       </div>
 
-      <center> <a href="#" class="btn btn-success"><p class="fuente-boton">Más información</p></a></center> 
+      <center> <a href="promociones.html" class="btn btn-success"><p class="fuente-boton">Más información</p></a></center> 
 
   </div>
          <div class="col-md-4" style="padding-bottom:15px;">          
@@ -140,7 +140,7 @@ and open the template in the editor.
        <div class="alert alert-info"><p><strong>Restaurantes</strong><br>Fiesta de sabores!</p>
           Para todos los gustos tenemos una gran variedad de menús para satisfacer al paladar más exigente!
       </div>
-       <center> <a href="#" class="btn btn-info"><p class="fuente-boton">Más información</p></a></center>
+             <center> <a href="restaurantes.html" class="btn btn-info"><p class="fuente-boton">Más información</p></a></center>
      </div>
          <div class="col-md-4" style="padding-bottom:15px;">   
     <a id="informacion-hoteles" href="#" class="thumbnail">
