--- a/WEB-SITES/web/promociones.html
+++ b/WEB-SITES/web/promociones.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Kuicho Promociones</title>
+        <title>No te pierdas esta promocion unica!!!</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
