--- a/WEB-SITES/web/administracion-promociones.html
+++ b/WEB-SITES/web/administracion-promociones.html
@@ -48,6 +48,7 @@ and open the template in the editor.
              </div>
         </div>
         </div>
+    <center> <iframe width="100%" height="900" src="http://campitos.cfapps.io/archivo"  frameBorder="0"  ></iframe></center>
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="bootstrap/js/docs.min.js"></script>
